HandOnWall implemented but needs to be refractored and the choosing of the first side needs to be corrected